// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File mapping arrow functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 152,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 143,
    },
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 163,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 154,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 67,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 22,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 142,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 68,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping arrow functions with more complex statements 1`] = `
Object {
  "functionCalls": Array [],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 45,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 7,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 121,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 49,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping async/await functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "11",
      ],
      "end": 146,
      "filename": "src/dir/a.js",
      "name": "agaga",
      "pos": 137,
    },
    Object {
      "args": Array [
        "22",
      ],
      "end": 163,
      "filename": "src/dir/a.js",
      "name": "amaga",
      "pos": 154,
    },
    Object {
      "args": Array [
        "111",
      ],
      "end": 174,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 165,
    },
    Object {
      "args": Array [
        "1221",
      ],
      "end": 186,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 176,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 34,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 1,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 75,
      "filename": "src/dir/a.js",
      "name": "agaga",
      "pos": 35,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 106,
      "filename": "src/dir/a.js",
      "name": "amaga",
      "pos": 76,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 130,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 107,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping async/await functions in class 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 202,
      "filename": "src/dir/a.js",
      "name": "propFuncAsync",
      "pos": 182,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 232,
      "filename": "src/dir/a.js",
      "name": "methodFuncAsync",
      "pos": 210,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 35,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 15,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 82,
      "filename": "src/dir/a.js",
      "name": "methodFuncAsync",
      "pos": 38,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 116,
      "filename": "src/dir/a.js",
      "name": "propFuncAsync",
      "pos": 85,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 152,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 119,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping class functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 149,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 134,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 168,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 151,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 73,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 53,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 110,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 77,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping jsx 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "CLICK",
      ],
      "end": 136,
      "filename": "src/dir/a.tsx",
      "name": "alert",
      "pos": 122,
    },
    Object {
      "args": Array [
        "EXPR:undefined...",
      ],
      "end": 370,
      "filename": "src/dir/a.tsx",
      "name": "map",
      "pos": 194,
    },
    Object {
      "args": Array [],
      "end": 288,
      "filename": "src/dir/a.tsx",
      "name": "toLocaleTimeString",
      "pos": 265,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        undefined,
      ],
      "end": 390,
      "filename": "src/dir/a.tsx",
      "name": "History",
      "pos": 28,
    },
    Object {
      "args": Array [],
      "end": 141,
      "filename": "src/dir/a.tsx",
      "name": "onClick",
      "pos": 94,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping regular functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 68,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 60,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 92,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 84,
    },
    Object {
      "args": Array [
        "EXPR:gaga...",
      ],
      "end": 109,
      "filename": "src/dir/a.js",
      "name": "FEFE",
      "pos": 95,
    },
    Object {
      "args": Array [
        "33",
      ],
      "end": 108,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 100,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 58,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 22,
    },
  ],
  "includes": Array [],
}
`;
